--- a/style.css
+++ b/style.css
@@ -8,6 +8,11 @@ body{
      height: 100vh;
      font-family: serif;
 }
+hr{
+     width: 80%;
+     color: rgb(161, 161, 161);
+     margin: 0 auto;
+}
 li{
      list-style: none;
 }
@@ -97,6 +102,9 @@ li{
      border-bottom: 2px solid rgb(161, 161, 161)  ;
 }
 
+/* --------------------- first main section -------------------- */
+
+
 .first{
      display:flex;
 }
@@ -112,7 +120,9 @@ li{
 .image img{
      padding-top: 2.5rem;
 }
-
+.image:hover{
+     background-color: rgb(161, 161, 161);
+}
 .firstMain{
      width: 50rem;
      padding-top: 10rem;
@@ -131,3 +141,5 @@ li{
      padding-top: 2rem;
      text-align: justify;
 }
+/* --------------------- second main section -------------------- */
+
