--- a/style.css
+++ b/style.css
@@ -127,13 +127,13 @@ li{
      width: 50rem;
      padding-top: 10rem;
 }
-.firstMain h1{
+.firstMain h1, .secondText h1{
      color:white;
      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
      font-size: 3.5rem;
      padding-left: 2rem;
 }
-.firstMain p{
+.firstMain p, .secondText p{
      color: rgb(161, 161, 161);
      font-size: 1.5rem;
      width: 90%;
@@ -143,3 +143,60 @@ li{
 }
 /* --------------------- second main section -------------------- */
 
+.second{
+     display: flex;
+     flex-direction:row;
+     margin: 7rem 10rem;
+     margin-bottom: 4rem !important;
+}
+.secondText{
+     /* padding-left: 10rem; */
+     padding-bottom: 5rem;
+     width: auto;
+}
+.number{
+     margin-top: 4rem;
+     margin-left: 4rem;
+     font-size: 3rem !important;
+}
+
+.menu{
+     display: flex;
+     flex-direction: column;
+}
+.item{
+     display: flex;
+     flex-direction: row;
+     height: 8rem;
+     background-color: rgb(161, 161, 161);
+     margin-bottom: 0.7rem;
+     border-radius: 10px;
+     overflow: hidden;
+     padding: 1rem;
+     width: 35rem;
+}
+
+.item i{
+     font-size: 3.8rem;
+     color: white;
+     background-color: rgb(212, 212, 0);
+     padding: 0 1.1rem;
+     padding-top: 0.2rem;
+     border-radius: 50%;
+}
+.item p span{
+     font-size: 1.5rem;
+}
+.item p{
+     margin-left: 2rem;
+}
+
+.lightItem{
+     background-color: white;
+}
+.item2 i{
+     background-color: #155263;
+}
+.item3 i{
+     background-color: #e46161;
+}
