--- a/style.css
+++ b/style.css
@@ -175,7 +175,9 @@ li{
      padding: 1rem;
      width: 35rem;
 }
-
+.item:hover{
+     background-color: white;
+}
 .item i{
      font-size: 3.8rem;
      color: white;
@@ -199,4 +201,32 @@ li{
 }
 .item3 i{
      background-color: #e46161;
+}
+/* --------------------- footer -------------------- */
+.up-footer{
+     width: 80%;
+     padding: 5rem 0rem;
+     margin: 0 auto;
+}
+.up-footer h2{
+     font-size: 3rem;
+     color: white;
+     font-weight: 100;
+     font-family: serif;
+     text-align: center;
+     padding-bottom: 2rem;
+}
+.up-footer button{
+     font-size: large;
+     padding:0.5rem 1rem;
+     margin: 0 auto;
+     display: block;
+     border: white solid 2px;
+     border-radius: 5px;
+     background: transparent;
+     color: white;
+}
+.up-footer button:hover{
+     background-color: white;
+     color:black;
 }
